force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Current_Initial_Sync_Count__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Current_Initial_Sync_Count__c</fullName>
    <label>Current Initial Sync Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>