force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Excluded_Field_Options__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Excluded_Field_Options__c</fullName>
    <label>Excluded Field Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>