force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Initial_Sync_Complete__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Initial_Sync_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Sync Complete</label>
    <type>Checkbox</type>
</CustomField>