force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Loan_Sync_Job_Frequency__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Loan_Sync_Job_Frequency__c</fullName>
    <label>Loan Sync Job Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Every hour</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Every 2 hours</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Every 3 hours</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Every 4 hours</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Every 6 hours</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Every 8 hours</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Every 12 hours</label>
            </value>
            <value>
                <fullName>daily</fullName>
                <label>Once Daily</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>