force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Loan_Sync_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Loan_Sync_Job_Id__c</fullName>
    <label>Loan Sync Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>