force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Loan_Sync_Job_Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Loan_Sync_Job_Start_Hour__c</fullName>
    <label>Loan Sync Job Start Hour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>12:00 am</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1:00 am</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2:00 am</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3:00 am</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4:00 am</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5:00 am</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6:00 am</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7:00 am</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8:00 am</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9:00 am</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10:00 am</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11:00 am</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12:00 pm</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>1:00 pm</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>2:00 pm</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>3:00 pm</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>4:00 pm</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>5:00 pm</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>6:00 pm</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>7:00 pm</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>8:00 pm</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>9:00 pm</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>10:00 pm</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>11:00 pm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>