force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Previous_Loan_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Previous_Loan_Sync_Time__c</fullName>
    <label>Previous Loan Sync Time</label>
    <type>DateTime</type>
</CustomField>