force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Public_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Public_Site_Url__c</fullName>
    <label>Public Site Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>