force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Steps_Completed__c</fullName>
    <label>Steps Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>