force-app/main/default/objects/encompass_By_EM__Setup_Data__c/fields/encompass_By_EM__Webhook_Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Webhook_Signing_Key__c</fullName>
    <label>Webhook Signing Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>